fix responsive on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,7 @@
   width: 100vw;
   display: flex;
   flex-direction: column;
+  position:fixed;
 }
 
 .navBar {
